--- a/choropleth_map.Rmd
+++ b/choropleth_map.Rmd
@@ -287,7 +287,7 @@ legend( x = "right"
 
 Thank you for reading this tutorial. My name is Cristian E. Nuno and I am an aspiring data scientist. To see more of my work, please visit my professional portfolio [*Urban Data Science*](https://cenuno.github.io/).
 
-## Session Info and RStudio Version
+## Session Info 
 
 ```{r, eval=FALSE}
 # Print version information about R, the OS and attached or loaded packages.
